--- a/build.xml
+++ b/build.xml
@@ -160,18 +160,6 @@
   <property name="project.jdk.home" value="${jdk.home.9.0}"/>
   <property name="project.jdk.bin" value="${jdk.bin.9.0}"/>
   <property name="project.jdk.classpath" value="jdk.classpath.9.0"/>
-  <!-- Register Custom Compiler Taskdefs -->
-  <property name="javac2.home" value="${idea.home}/lib"/>
-  <path id="javac2.classpath">
-    <pathelement location="${javac2.home}/javac2.jar"/>
-    <pathelement location="${javac2.home}/jdom.jar"/>
-    <pathelement location="${javac2.home}/asm-all.jar"/>
-    <pathelement location="${javac2.home}/jgoodies-forms.jar"/>
-  </path>
-  <target name="register.custom.compilers">
-    <taskdef name="javac2" classname="com.intellij.ant.Javac2" classpathref="javac2.classpath"/>
-    <taskdef name="instrumentIdeaExtensions" classname="com.intellij.ant.InstrumentIdeaExtensions" classpathref="javac2.classpath"/>
-  </target>
   
   <!-- Modules -->
   
@@ -241,15 +229,15 @@
   
   <target name="compile.module.popii_-_exercises" depends="compile.module.popii_-_exercises.production,compile.module.popii_-_exercises.tests" description="Compile module POPII - Exercises"/>
   
-  <target name="compile.module.popii_-_exercises.production" depends="register.custom.compilers" description="Compile module POPII - Exercises; production classes">
+  <target name="compile.module.popii_-_exercises.production" description="Compile module POPII - Exercises; production classes">
     <mkdir dir="${popii_-_exercises.output.dir}"/>
-    <javac2 destdir="${popii_-_exercises.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.popii_-_exercises}/javac">
+    <javac destdir="${popii_-_exercises.output.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.popii_-_exercises}/javac">
       <compilerarg line="${compiler.args.popii_-_exercises}"/>
       <bootclasspath refid="popii_-_exercises.module.bootclasspath"/>
       <classpath refid="popii_-_exercises.module.production.classpath"/>
       <src refid="popii_-_exercises.module.sourcepath"/>
       <patternset refid="excluded.from.compilation.popii_-_exercises"/>
-    </javac2>
+    </javac>
     
     <copy todir="${popii_-_exercises.output.dir}">
       <fileset dir="${module.popii_-_exercises.basedir}/src">
@@ -259,15 +247,15 @@
     </copy>
   </target>
   
-  <target name="compile.module.popii_-_exercises.tests" depends="register.custom.compilers,compile.module.popii_-_exercises.production" description="compile module POPII - Exercises; test classes" unless="skip.tests">
+  <target name="compile.module.popii_-_exercises.tests" depends="compile.module.popii_-_exercises.production" description="compile module POPII - Exercises; test classes" unless="skip.tests">
     <mkdir dir="${popii_-_exercises.testoutput.dir}"/>
-    <javac2 destdir="${popii_-_exercises.testoutput.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.popii_-_exercises}/javac">
+    <javac destdir="${popii_-_exercises.testoutput.dir}" debug="${compiler.debug}" nowarn="${compiler.generate.no.warnings}" memorymaximumsize="${compiler.max.memory}" fork="true" executable="${module.jdk.bin.popii_-_exercises}/javac">
       <compilerarg line="${compiler.args.popii_-_exercises}"/>
       <bootclasspath refid="popii_-_exercises.module.bootclasspath"/>
       <classpath refid="popii_-_exercises.module.classpath"/>
       <src refid="popii_-_exercises.module.test.sourcepath"/>
       <patternset refid="excluded.from.compilation.popii_-_exercises"/>
-    </javac2>
+    </javac>
     
     <copy todir="${popii_-_exercises.testoutput.dir}">
       <fileset dir="${module.popii_-_exercises.basedir}/Test">
